# ml-playground

./: .gitignore  README.md  docker-compose.yml
api/: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  main.py
api/app/core/: config.py  middleware.py
api/app/domain/enums/: movies.py  similarity_enums.py
api/app/domain/exceptions/: service_exception.py
api/app/infra/repository/: kvs_repository.py  redis_repository.py
api/app/service/: search.py  search_service.py  similar_service.py  similarity_service.py
api/app/service/logic/: movie_logic.py  similarity_logic.py
api/app/util/: http.py  query.py  query_util.py
api/src/app/: __init__.py  main.py
api/src/app/core/: config.py  middleware.py
api/src/app/service/: search_service.py  similarity_service.py
api/src/app/util/: http_util.py
api/src/tests/: test_utils.py
api/src/tests/intergrations/: test_operation_router.py  test_search_router.py  test_similar_router.py
api/src/tests/units/: test_movie_logic.py  test_query_util.py  test_solr_query.py
api/tests/: utils.py
api/tests/intergrations/: test_search_router.py  test_similar_router.py
api/tests/units/: test_kvs_repository.py  test_movie_logic.py
batch/: .gitignore  Dockerfile  README.md  pyproject.toml
batch/app/: __init__.py  main.py
batch/app/core/: aop.py  config.py  constants.py  decorator.py  logger.py  logging.py
batch/app/domain/enums/: core_enums.py  movie_enums.py  similarity_enums.py
batch/app/domain/exceptions/: http_exception.py  service_exception.py
batch/app/entrypoints/v1/: input.py  (+6 more)
batch/app/service/: input_service.py  output_service.py  similarity_service.py
batch/app/util/: http.py  http_util.py  resource.py  resource_util.py
batch/resources/solr/: schema.json
batch/shells/: exec_all.sh  exec_input.sh  exec_output.sh  exec_similarity.sh
batch/src/app/: main.py
batch/src/tests/: conftest.py  utils.py
batch/tests/: conftest.py
batch/tests/units/: test_aop.py  test_genre_repository.py  test_input_logic.py  test_movie_model.py  test_movie_repository.py  test_output_logic.py  test_redis_repository.py  test_review_repository.py  test_similarity_logic.py
(+248 files in other folders)
