[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["yuya-okada527 <yuya.okada527@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
requests = "^2.25.1"
redis = "^3.5.3"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.812"
autopep8 = "^1.5.5"
rope = "^0.18.0"
pytest-cov = "^2.11.1"
fakeredis = "^1.4.5"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
