[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["yuya-okada527 <yuya.okada527@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
pydantic = "^1.7.3"
requests = "^2.25.1"
python-dotenv = "^0.15.0"
SQLAlchemy = "^1.3.23"
PyMySQL = "^1.0.2"
redis = "^3.5.3"
emoji = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.800"
autopep8 = "^1.5.5"
rope = "^0.18.0"
fakeredis = "^1.4.5"
pytest-cov = "^2.11.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
